css/style.css
/* CSS for changes to plugin */

.media.signpost {
  padding: 0px;
  border: 0px;
  margin-bottom: 1.5rem;
}

.media.signpost-email .media-body a,
.media.signpost-website .media-body a {
  /* These are technically the same, but use both */
  overflow-wrap: break-word;
  word-wrap: break-word;

  -ms-word-break: break-all;
  /* This is the dangerous one in WebKit, as it breaks things wherever
  word-break: break-all;*/
  /* Instead use this non-standard one: */
  word-break: break-word;

  /* Adds a hyphen where the word breaks, if supported (No Blink) */
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}

.media.callout-signpost .media-body a,
.signposts a {
  color: var(--hw-blue);
}

.media.callout-signpost .media-body a:hover,
.media.callout-signpost .media-body a:focus,
.signposts a:hover,
.signposts a:focus {
	color: var(--hw-grey);
	background-color:	var(--hw-blue);
	outline: 3px solid var(--hw-blue);
}

.panel-body .media-body a {
  color: var(--url-blue);
}

.panel-body .media-body a:hover,
.panel-body .media-body a:focus  {
  color: rgba(255,255,255,1.00) !important;
}

.post-edit-link {
  color: var(--url-blue) !important;
}

.post-edit-link:hover,
.post-edit-link:focus  {
  color: rgba(255,255,255,1.00) !important;
  background-color: var(--url-blue) !important;
  outline: 3px solid var(--url-blue) !important;
}

.callout-note .media-body a {
  color:	var(--hw-blue);
}

.callout-note .media-body a:hover,
.callout-note .media-body a:focus {
	color: #fcf8e3;
	background-color:	var(--hw-blue);
	outline: 3px solid var(--hw-blue);
}

.media.signpost .media-body p {
  margin-bottom: 0px;
}

.media.signpost .media-left {
  padding-right: 0px;
}

.media.signpost .media-body {
  font-size:16px;
}

.edit-signpost {
  text-align:right;
}

.media.callout {
  padding: 0px;
  max-width: 730px;
  margin: 2rem auto;
}

.media.callout p:last-child {
  margin-bottom: 0px;
}

.media.callout .media-left.callout {
  padding: 1.3rem 0 1.3rem 1rem;
  text-align: center;
}

.media.callout .media-body.callout {
  padding: 1rem;
}

.media.callout-note {
  border: 1px solid gold;
  background-color: #fcf8e3;
}

.media.callout-question {
  border: 1px solid #bce8f1;
  background-color: #d9edf7;
}

.media.callout-warning {
  border: 1px solid #ebccd1;
  background-color: #f2dede;
}

.media.callout-expired {
  border: 1px solid rgba(127,127,127,0.1);
  background-color: #F4F4F4;
}

.media.callout-expired .media-body.callout a {
  color: var(--hw-blue);
}

.media.callout-expired .media-body.callout a:hover{
  color: #F4F4F4;
  background-color: var(--hw-blue);
  outline: 3px solid var(--hw-blue);
}

.media.callout-signpost {
  border: 1px solid rgba(0, 0, 0, 0.2);
  background-color: #F7F7F7;
}

.media.callout-review {
  border: 1px solid var(--hw-green);
  background-color: white;
  border-radius: 3px;
}

.media.callout-review .city {
  color: #666;
  font-weight: 700;
}

.media.callout-review .media-left .fa-star {
  color: black;
}

#content .media.callout-review a[href*="sharepoint"]{
  padding: 0.6rem 1rem;
}


#content .media.download-removed {
	background-color: var(--hw-pale-grey);
	border-radius: 5px;
	/* border-color: var(--hw-purple); */
	border: 2px solid var(--hw-purple);
	margin: 1rem 0 1rem 0;
	padding: 1.6rem 2rem;
	display: inline-block;
	color: #333;
	text-decoration: none;
  font-weight: 700;
}

#content .media.download-removed p {
  margin: 0px;
}

#content .media.download-removed p::before {
	padding-right: 1.2rem;
	display: block;
	font-family: 'Font Awesome 5 Pro';
	font-weight: normal;
	font-size: 2rem;
	text-decoration: none;
	float: left;
	/*color: var(--hw-purple);*/
	content: "\f05e";
	font-weight: 900;
}

/* CSS for bootstrap tabs */
ul.nav-tabs li::before{
  content:none !important;
}

/* CSS for [last_update] [first_published]*/
.last-update p, .first-pub p {
  font-weight: 900;
}

